fix: spacing

--- a/frontend/src/scss/layout/_pills.scss
+++ b/frontend/src/scss/layout/_pills.scss
@@ -16,12 +16,3 @@
 		}
 	}
 }
-
-#my-transfers-wrapper,
-#my-listings-wrapper {
-	.nav-pills {
-		@include breakpoint-min(md) {
-			margin-bottom: $text-spacer-lg;
-		}
-	}
-}
