--- a/frontend/src/scss/layout/_spacing.scss
+++ b/frontend/src/scss/layout/_spacing.scss
@@ -12,12 +12,11 @@ $spacer-md: rem(80);
 
 // Text Spacers
 $heading-spacer: rem(64); // page headings
-$heading-spacer-sm: rem(29); // page headings
+$heading-spacer-sm: rem(27); // page headings
 $gap: rem(14);
 $gap-sm: rem(10);
 $gap-xs: rem(4);
 
-$text-spacer-lg: rem(64);
 $text-spacer: rem(32);
 $text-spacer-sm: rem(24);
 $text-spacer-xs: rem(16);
